--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <table border="1" style="margin-left:50px; margin-right:auto; margin-top:50px" >
 <th colspan="5"><div class="logo" align="left">
 <a href="https://dancrj.github.io/Q2-Activity-8/"><img src="https://i.imgur.com/Fx1FyWR.png" style=" width="80px" height="80px">
+<th colspan="5"><div class="logo" align="left"></a>
+<a href="https://dancrj.github.io/Q2-Activity-8/"><img src="https://i.imgur.com/gZHoQDV.png" style=" width="90px" height="80px">
+<th colspan="5"><div class="logo" align="left"></a>
+<a href="https://dancrj.github.io/About-Us/"><img src="https://i.imgur.com/nOMzMPm.png" style=" width="90px" height="90px">
+<th colspan="5"><div class="logo" align="left"></a>
+<a href="https://dancrj.github.io/FAQ/"><img src="https://i.imgur.com/AjxJNGO.png" style=" width="90px" height="90px">
 </div></th></a>
 <style>
 body {
